# ontobricks

./: .cursorrules  .databricksignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTORS.md  Makefile  README.md  app.yaml.template  databricks.yml  pyproject.toml  pytest.ini
.claude/skills/changelog/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/deploy/: SKILL.md
.cursor/: 01-expertise-and-principles.mdc  02-project-overview.mdc  03-system-components-and-requirements.mdc  04-project-structure.mdc  07-project-conventions.mdc  08-testing-and-deployment.mdc  09-package-management.mdc  11-frontend-design.mdc
.github/workflows/: changelog-presence.yml  ci.yml  eval-drift.yml  eval-gate.yml  lint-pr-title.yml  nightly.yml  release.yml
.planning/: ROADMAP.md
.planning/agents/agent_graph_interpreter/: SPEC.md
.planning/agents/agent_owl_generator/: SPEC.md
docs/: INFO.md  README.md  api.md  architecture.md  code_organization.md  cohort_discovery.md  dab-reference.md  data-access.md  deployment.md  development.md  examples.md  features.md  get-started.md  graphdb-integration.md  import-export.md  lakebase-graphdb.md  mcp.md  product.md  user-guide.md
docs/diagrams/: architecture-layers.mmd  callflow-domain-load.mmd  class-hierarchy.mmd
docs/sphinx/: changelog.rst  conf.py  index.rst
docs/sphinx/api/: agents.rst  api_external.rst  app.core.databricks.rst  app.core.graphdb.lakebase.rst  app.objects.registry.rst
docs/sphinx/overview/: architecture.rst
releases/: ReleaseNotes_V0.5.2.md  ReleaseNotes_V0.6.0.md  Roadmap_2026-07.md
scripts/: bootstrap-lakebase-perms.sh  deploy.config.sh  deploy.sh  migrate-registry-to-lakebase.sh  setup.sh  start.sh  stop.sh  update-deployed-app.sh  upgrade_lakebase_0.5_To_0.6.sql  upgrade_lakebase_0.6_add_graph_analytics.sql
src/agents/agent_auto_assignment/: engine.py
src/agents/agent_cohort/: tools.py
src/agents/agent_dtwin_chat/: __init__.py  engine.py  tools.py
src/agents/agent_graph_interpreter/: __init__.py  engine.py  tools.py
src/agents/agent_owl_generator/: engine.py
src/agents/tools/: graph_formatting.py  loopback_http.py  mapping.py  ontology.py
src/api/: __init__.py  constants.py  external_app.py
src/api/routers/: digitaltwin.py  domains.py
src/api/routers/internal/: _helpers.py  domain.py  dtwin.py  home.py  ontology.py  review.py  settings.py
src/back/core/databricks/: DatabricksAuth.py  (+7 more)
src/back/fastapi/: graphql_routes.py
src/back/objects/: __init__.py
src/front/config/: menu_config.json
src/front/routes/: dtwin.py  resolve.py
src/front/templates/: about.html  base.html  domain.html  dtwin.html  home.html  ontology.html  registry.html  settings.html
src/mcp-server/: app.yaml  app.yaml.template  pyproject.toml
src/mcp-server/server/: app.py
src/shared/config/: settings.py
src/shared/fastapi/: health.py  main.py
tests/: test_health.py  test_home_service.py  test_lakebase_auth.py  test_registry.py  test_synced_table_manager.py
tests/e2e/: README.md  conftest.py
tests/e2e/domain/: test_domain_flows.py
tests/e2e/dtwin/: test_dtwin_api_flows.py  test_dtwin_flows.py
tests/e2e/help/: test_help_modal_flows.py
tests/e2e/mapping/: test_mapping_flows.py
tests/e2e/navigation/: test_navigation_flows.py  test_resolve_flows.py
tests/e2e/ontology/: test_class_crud_flows.py  test_import_flows.py  test_information_flows.py  test_owl_export_flows.py  test_property_crud_flows.py  test_sidebar_flows.py
tests/e2e/registry/: test_registry_flows.py
tests/e2e/scenarios/: README.md  _harness.py  conftest.py  test_full_lifecycle.py  test_scenario_01_generate_live.py  test_scenario_02_collab_lifecycle.py  test_scenario_03_rules_analysis.py  test_scenario_1_generate_live.py  test_scenario_3_rules_analysis.py  test_scenario_validation.py
tests/e2e/security/: test_access_denied_flows.py  test_permissions_flows.py
tests/e2e/settings/: test_settings_flows.py  test_write_flows.py
tests/eval/: run_agent_graph_interpreter.py  thresholds.yaml
tests/units/agents/: test_agent_engine_base.py  test_agent_owl_generator_class_cap.py  test_agent_owl_generator_truncation.py  test_agent_serialization.py  test_agent_tracing.py  test_llm_utils.py
tests/units/api/: test_api_service.py  test_discussion_panel_assets.py  test_edit_lock_endpoints.py  test_external_api.py  test_graphql.py  test_help_api.py  test_review_endpoints.py  test_routes.py  test_ui_rendering.py
tests/units/auth/: test_csrf_middleware.py  test_permission_middleware.py  test_route_guards.py
tests/units/core/: test_community_detector.py  test_dashboard_service.py  test_databricks_client.py  test_errors.py  test_graph_metrics.py  test_lakebase_flat_store.py  test_metadata_mgt.py  test_middleware_session.py  test_sql_wizard.py  test_task_manager.py  test_timing_middleware.py  test_uc_file_service.py  test_unity_catalog.py  test_uri_sql_helpers.py  test_volume_file_service.py  test_workspace_service.py
tests/units/domain/: test_change_audit.py  test_design_views.py  test_domain_service.py  test_home_service.py  test_version_status_cache.py  test_workflow_domain.py
tests/units/dtwin/: test_build_pipeline_streaming.py  test_digitaltwin_api.py  test_dtwin_service.py
tests/units/mapping/: test_attribute_exclusion.py  test_mapping_service.py  test_r2rml_generator.py  test_r2rml_parser.py  test_workflow_mapping.py  test_workflow_sparql.py
tests/units/ontology/: test_conflict_detector.py  test_dataquality.py  test_industry_importers.py  test_ontology_service.py  test_owl_generator.py  test_owl_parser.py  test_rdf_utils.py  test_rdfs_parser.py  test_reasoning.py  test_sparql_service.py  test_workflow_owl_roundtrip.py
tests/units/registry/: test_change_event_service.py  test_change_event_store.py  test_comment_multiuser.py  test_comment_service.py  test_edit_lock_service.py  test_edit_lock_store.py  test_obx_format.py  test_registry_cache.py  test_registry_store.py  test_review_multiuser.py  test_review_service.py
tests/units/settings/: test_config.py  test_settings_domain_permissions.py  test_settings_obx.py
(+157 files in other folders)
