[project]
name = "mcp-ontobricks"
version = "1.0.0"
description = "OntoBricks MCP Server — Knowledge graph tools for Databricks Playground"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.3.1",
    "httpx>=0.25.0",
    "uvicorn>=0.34.0",
    "pydantic>=2",
    "databricks-sdk>=0.20.0",
]

[project.scripts]
mcp-ontobricks = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
