[project]
name = "mcp-ontobricks"
version = "1.0.0"
description = "OntoBricks MCP Server — Knowledge graph tools for Databricks Playground"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.3.1",
    "httpx>=0.25.0",
    "uvicorn>=0.34.0",
    "pydantic>=2",
    "databricks-sdk>=0.20.0",
]

[tool.uv]
constraint-dependencies = [
    # pydantic-settings>=2.14.2: NestedSecretsSettingsSource symlink traversal
    # (GHSA-4xgf-cpjx-pc3j) — symlinks inside secrets_dir pointing outside it were
    # followed, enabling local file read and bypassing secrets_dir_max_size.
    # Pulled in transitively (fastmcp/databricks-sdk). Dependabot #60/#61.
    "pydantic-settings>=2.14.2",
]

[project.scripts]
mcp-ontobricks = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
